# ZZPO

./: README.md
ZZPO/: README.md  pyproject.toml
ZZPO/data/: meals.json
ZZPO/docs/: report.md  uml_class_diagram.mmd  uml_sequence_diagram.mmd
ZZPO/scripts/: testy.sh  uruchom.sh
ZZPO/src/diet_planner/: __init__.py  cli.py  models.py  repository.py  services.py
ZZPO/tests/: test_services.py
