[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "diet-planner-student-project"
version = "0.1.0"
description = "Prosta studencka aplikacja do planowania diety"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
diet-planner = "diet_planner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/diet_planner"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
